<resources>
  <string name="app_name">PillarWeather</string>
  <string name="action_settings">Settings</string>
  <string name="hint_text">City name</string>
  <string name="celsius">Celsius</string>
  <string name="fahrenheit">Fahrenheit</string>
  <string name="city_name">City name</string>
  <string name="zip_code">Zip code</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="get_city">Get city</string>
  <string name="get_zip">Get zip</string>
  <string name="get_lat_lon">Get lat/lon</string>
</resources>
